# profilarr

./: .gitignore  flake.nix  module.nix
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
