[project]
name = "profilarr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>3.8",
    "apscheduler==3.10.4",
    "asyncio==3.4.3",
    "flask==2.0.1",
    "flask-cors==3.0.10",
    "gitpython==3.1.24",
    "gunicorn==21.2.0",
    "pyyaml>6",
    "regex==2023.10.3",
    "requests==2.26.0",
    "werkzeug==2.0.1",
]
